Added comment moderation functionality for admin

--- a/app/assets/stylesheets/comments.css.scss
+++ b/app/assets/stylesheets/comments.css.scss
@@ -24,3 +24,13 @@
   margin-top:446px;
   position:realtive;
 }
+
+.view_comment_container {
+  width:520px;
+  margin-left:400px;
+}
+
+.div_with_comment_content {
+  margin-left:20px;
+  word-wrap:break-word;
+}
