--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -5,7 +5,7 @@
       <%= link_to User.find(comment.user_id).name, User.find(comment.user_id) %> <span id="comment_span"><%= time_ago_in_words(comment.created_at) %> ago</span><br>
       <div class = "div_with_comment_content"><%= comment.content %></div>
       <% if can? :manage, comment %>
-        <span id = "comment_span"><%= link_to "destroy", comment_path(comment), :method => :delete, :confirm => "Are you sure ?" %></span>
+        <span id = "comment_span"><%= link_to "destroy", comment_path(comment), :method => :delete, data: { confirm: "Are you sure?" } %></span>
         <span id ="comment_span"> <button class = "active_button_class" id = "comment<%= comment.id %>" value = "<%= comment.id %>" table = "<%= comment.class %>" ><%=check_activation_status(comment.id, comment.class) %></button></span>
       <% end %><hr>
     <% end %>
