--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -13,7 +13,11 @@
         <tr>
           <td><%= n+1 %></td>
           <td><%= user.name%></td>
-          <td><%= link_to "Show", user_path(user) %></td>
+          <td><%= link_to "Show", user_path(user), class: 'btn btn-primary btn-sm' %>
+            <% unless user == current_user %>
+              <%= link_to "Add Friend", friendships_path(:friend_id => user) , method: :post, class: 'btn btn-primary btn-sm' %>
+            <% end %>
+          </td>
         </tr>
       <% end %>
     </table>
